swagger implementation