@@ -1,7 +1,6 @@
 package com.devtrack.service.impl;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -24,25 +23,26 @@ public class SkillServiceImpl implements SkillService {
     private final SkillRepository skillRepository;
     private final UserRepository userRepository;
 
-    public SkillServiceImpl(SkillRepository skillRepository,
-                            UserRepository userRepository) {
+    public SkillServiceImpl(SkillRepository skillRepository,UserRepository userRepository) {
         this.skillRepository = skillRepository;
         this.userRepository = userRepository;
     }
 
+  
     @Override
-    public SkillResponse createSkill(Long userId, SkillRequest request) {
+    public SkillResponse createSkill(Long userId,SkillRequest request) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("User not found with id : " + userId));
+        User user = getUser(userId);
 
-        if (skillRepository.existsByNameIgnoreCaseAndUser(request.getName(), user)) {
-            throw new RuntimeException("Skill already exists");
+        String skillName = request.getName().trim();
+
+        if (skillRepository.existsByNameIgnoreCaseAndUser(skillName, user)) {
+            throw new IllegalArgumentException( "Skill already exists for this user");
         }
 
-        Skill skill = SkillMapper.toEntity(request);
+        request.setName(skillName);
 
+        Skill skill = SkillMapper.toEntity(request);
         skill.setUser(user);
 
         Skill savedSkill = skillRepository.save(skill);
@@ -51,55 +51,54 @@ public class SkillServiceImpl implements SkillService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<SkillResponse> getAllSkills(Long userId) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("User not found with id : " + userId));
+        User user = getUser(userId);
 
         return skillRepository.findByUser(user)
                 .stream()
                 .map(SkillMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public SkillResponse getSkillById(Long userId, Long skillId) {
+    @Transactional(readOnly = true)
+    public SkillResponse getSkillById(Long userId,Long skillId) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("User not found with id : " + userId));
+        User user = getUser(userId);
 
-        Skill skill = skillRepository.findByIdAndUser(skillId, user)
+        Skill skill = skillRepository.findByIdAndUser(skillId,user)
                 .orElseThrow(() ->
-                        new ResourceNotFoundException("Skill not found with id : " + skillId));
+                        new ResourceNotFoundException("Skill not found with id : "+ skillId
+                        )
+                );
 
         return SkillMapper.toResponse(skill);
     }
 
     @Override
-    public SkillResponse updateSkill(Long userId,
-                                     Long skillId,
-                                     SkillRequest request) {
+    public SkillResponse updateSkill(Long userId, Long skillId, SkillRequest request) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("User not found with id : " + userId));
+        User user = getUser(userId);
 
         Skill skill = skillRepository.findByIdAndUser(skillId, user)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Skill not found with id : " + skillId));
+                .orElseThrow(() -> new ResourceNotFoundException("Skill not found with id : "+ skillId));
 
-        if (!skill.getName().equalsIgnoreCase(request.getName())
-                && skillRepository.existsByNameIgnoreCaseAndUser(request.getName(), user)) {
+        String newName = request.getName().trim();
 
-            throw new RuntimeException("Skill already exists");
+        if (!skill.getName().equalsIgnoreCase(newName) && skillRepository
+                    .existsByNameIgnoreCaseAndUser(newName,user)
+        ) {
+
+            throw new IllegalArgumentException("Another skill with this name already exists");
         }
 
-        skill.setName(request.getName());
+        skill.setName(newName);
         skill.setStatus(request.getStatus());
         skill.setTargetDate(request.getTargetDate());
 
+     
         Skill updatedSkill = skillRepository.save(skill);
 
         return SkillMapper.toResponse(updatedSkill);
@@ -108,29 +107,32 @@ public class SkillServiceImpl implements SkillService {
     @Override
     public void deleteSkill(Long userId, Long skillId) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("User not found with id : " + userId));
+        User user = getUser(userId);
 
-        Skill skill = skillRepository.findByIdAndUser(skillId, user)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("Skill not found with id : " + skillId));
-
+        Skill skill = skillRepository.findByIdAndUser(skillId,user).orElseThrow(() ->
+                        new ResourceNotFoundException("Skill not found with id : "+ skillId)
+                );
         skillRepository.delete(skill);
     }
 
     @Override
-    public List<SkillResponse> getSkillsByStatus(Long userId,
-                                                 SkillStatus status) {
+    @Transactional(readOnly = true)
+    public List<SkillResponse> getSkillsByStatus(Long userId,SkillStatus status
+    ) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() ->
-                        new ResourceNotFoundException("User not found with id : " + userId));
+        User user = getUser(userId);
 
-        return skillRepository.findByUserAndStatus(user, status)
+        return skillRepository
+                .findByUserAndStatus(user, status)
                 .stream()
                 .map(SkillMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    private User getUser(Long userId) {
+
+        return userRepository.findById(userId).orElseThrow(() ->
+                        new ResourceNotFoundException("User not found with id : "+ userId)
+                );
+    }
 }
